--- a/views/_booking_planning.erb
+++ b/views/_booking_planning.erb
@@ -41,9 +41,6 @@
     animation: selected 1s infinite; /* IE 10+ */
   }  
 
-</style>
-
-<style>
 .pending-assignation-table {
   table-layout: fixed;
   border: 1px solid #DDD;
@@ -55,11 +52,11 @@
    font-size: 0.85em;
  }
  #operation_area {
-   max-height: 400px; 
+   max-height: 450px; 
    overflow-y: scroll;
  }
  .working_area {
-    max-height: 260px;
+    max-height: 295px;
     overflow-y: scroll;
  }
 </style>
@@ -77,7 +74,7 @@
   <div class="grid_3">
     <div id="operation_container" class="left-margin smaller_text">
       <div id="operation_header">
-        <form name="reservation_search">
+        <form name="reservation_search" style="display: none">
           <div class="formrow">
             <input type="text" id="reservation_search_text" maxlength="40"
               placeholder="buscar reserva" style="width: 60%"/>
