--- a/views/_booking_planning_assign_form.erb
+++ b/views/_booking_planning_assign_form.erb
@@ -1,6 +1,5 @@
     <div id="select_resource" class="highlight_block" style="display: none">
-      <p id="select_resource_help" class="smaller_text">Seleccione el recurso al que desea realizar la reserva pulsando sobre cualquier
-         celda de la fila del recurso</p>
+      <p id="select_resource_help" class="smaller_text">Seleccione el recurso al que desea realizar la reserva pulsando sobre cualquier celda de la fila del recurso</p>
       <div>
         <div id="reassign_resource" style="display:none">
           <div class="guiblock smaller_text">
@@ -11,7 +10,7 @@
             <input type="hidden" name="resource"/>
             <button id="reassign_button" type="button" class="form-button green-button centered_text" style="margin: 0 auto; display: block; width: 100%">Asignar recurso</button>
           </form>
+          <button type="button" id="cancel_select_resource_button" class="form-button red-button" style="margin: 0 auto; width: 100%">Cancelar selección recurso</button>
         </div>    
-        <button type="button" id="cancel_select_resource_button" class="form-button red-button" style="margin: 0 auto; display: none; width: 100%">Cancelar selección recurso</button>
       </div>
     </div>
